# fyodor

./: .gitignore  DownloadNC.py  MANIFEST.in  PyWV.py  README.md  README.rst  example.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/api/: fyodor.downloadNC.doctree  fyodor.pwv.doctree  fyodor.renameNC.doctree  fyodor.tpw.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/fyodor/: core.html
docs/_build/html/_sources/api/: fyodor.downloadNC.rst.txt  fyodor.renameNC.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/api/: fyodor.downloadNC.html  fyodor.pwv.html  fyodor.renameNC.html  fyodor.tpw.html
docs/api/: fyodor.pwv.rst  fyodor.tpw.rst
docs/fyodor/: index.rst  installation.rst  tutorial.rst
fyodor/: __init__.py  core.py  locations.py  version.py
fyodor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fyodor/tests/: test_core.py
licenses/: LICENSE.rst
