[metadata]
name = fyodor
author = Erik Andreas Meier Valdés
author_email = erik.meiervaldes@csh.unibe.ch
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/Erikmeier18/fyodor
description = Precipitable Water Vapour calculation using GOES-R on Python
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
 

[options.package_data]
fyodor = data/*

[tool:pytest]
testpaths = "fyodor" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  fyodor/__init*
  fyodor/conftest.py
  fyodor/*setup_package*
  fyodor/tests/*
  fyodor/*/tests/*
  fyodor/extern/*
  fyodor/version*
  */fyodor/__init*
  */fyodor/conftest.py
  */fyodor/*setup_package*
  */fyodor/tests/*
  */fyodor/*/tests/*
  */fyodor/extern/*
  */fyodor/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
